force-app/main/default/objects/Document_Submission__c/Document_Submission__c.object-meta.xml
<CustomObject>
    <label>Document Submission</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Document Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>