force-app/main/default/objects/Document_Submission__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any reviewer comments or notes about this document.</description>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>