force-app/main/default/objects/Document_Submission__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Salesforce ContentDocument ID of the uploaded file (from lightning-file-upload component).</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>