force-app/main/default/objects/Document_Submission__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Type of KYC/AML document required or submitted.</description>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AML_KYC_Policy</fullName>
                <label>AML/KYC Policy</label>
            </value>
            <value>
                <fullName>Certificate_of_Incorporation</fullName>
                <label>Certificate of Incorporation</label>
            </value>
            <value>
                <fullName>Financial_Statements</fullName>
                <label>Financial Statements</label>
            </value>
            <value>
                <fullName>Govt_ID</fullName>
                <label>Government ID</label>
            </value>
            <value>
                <fullName>Memorandum_and_Articles</fullName>
                <label>Memorandum &amp; Articles of Association</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Proof_of_Address</fullName>
                <label>Proof of Address</label>
            </value>
            <value>
                <fullName>Proof_of_Beneficial_Ownership</fullName>
                <label>Proof of Beneficial Ownership</label>
            </value>
            <value>
                <fullName>Proof_of_Registered_Address</fullName>
                <label>Proof of Registered Address</label>
            </value>
            <value>
                <fullName>Signatory_ID</fullName>
                <label>Signatory Identity Documents</label>
            </value>
            <value>
                <fullName>Source_of_Wealth_Evidence</fullName>
                <label>Source of Wealth Evidence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>