force-app/main/default/objects/Document_Submission__c/fields/Is_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether compliance has reviewed and approved this document.</description>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>