force-app/main/default/objects/Document_Submission__c/fields/Is_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the document file has been uploaded by the client.</description>
    <label>Is Received</label>
    <type>Checkbox</type>
</CustomField>