force-app/main/default/objects/Document_Submission__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this document is required for the application scenario.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>