force-app/main/default/objects/Document_Submission__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Logical level this document applies to (Application, Party, Role, or Service level).</description>
    <label>Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
                <default>true</default>
                <label>Application</label>
            </value>
            <value>
                <fullName>Party</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>