force-app/main/default/objects/Document_Submission__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <description>Parent onboarding application this document submission belongs to.</description>
    <label>Onboarding Application</label>
    <referenceTo>Onboarding_Application__c</referenceTo>
    <relationshipLabel>Document Submissions</relationshipLabel>
    <relationshipName>Document_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>