force-app/main/default/objects/Document_Submission__c/fields/Related_Party__c.field-meta.xml
<CustomField>
    <fullName>Related_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Party this document belongs to (if applicable - e.g. passport belongs to a specific shareholder).</description>
    <label>Related Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Document Submissions</relationshipLabel>
    <relationshipName>Document_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>